Fixed alignment

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 
 a {
   padding: 0px;
-  text-align: center;
 }
 
 #headshot {
